js/js.translator/testData/incremental/invalidationWithPL/removeInlineFunction/main/test.kt
fun test(): Int {
    try {
        return inlineFoo { foo() }
    } catch (e: Error) {
        return 1
    }
}
